# WorldFoundry

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  Taskfile.yml  codemagic.yaml  wf-status.md
.claude/: settings.local.json~
android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
docs/: 2026-04-10-worldfoundry-iffcomp-format.md  chargrab-rs-plan.md  codemagic-setup.md  coding-conventions.md  command-line-switches.md  compile-time-switches.md  dev-setup.md  drop-dead-renderers-plan.md  level-building.md  linux-engine-port.md  scripting-languages.md  worldfoundry_milestone1_evaluation_plan.md
docs/investigations/: 2026-04-11-wftools-rewrite-analysis.md  2026-04-12-steam-shipping-plan.md  2026-04-13-blender-to-cd-iff-pipeline.md  2026-04-14-audio-sound-music.md  2026-04-14-compile-time-switches.md  2026-04-14-constraint-based-props.md  2026-04-14-jolt-physics-integration.md  2026-04-14-mobile-port-android-ios.md  2026-04-14-multiplayer-voice-mobile-input.md  2026-04-14-party-game.md  2026-04-14-physics-engine-survey.md  2026-04-14-remove-audio.md  2026-04-14-rest-api-box-poc.md  2026-04-14-scripting-language-replacement.md  2026-04-15-loc-tracking.md  2026-04-16-coding-conventions-remediation.md  2026-04-16-levcomp-rs-reverse-engineering.md  2026-04-17-iff-format-lineage.md  2026-04-18-android-port-closure.md  2026-04-18-android-port-size-and-ram.md  2026-04-19-iffcomp-offsetof-arithmetic.md  2026-04-19-oad-buttontype-audit.md  2026-04-19-path-base-rot-oracle-mystery.md  2026-04-19-snowgoons-build-pipeline.md  2026-04-28-engine-capabilities-survey.md  2026-04-28-level-construction-tooling.md  2026-04-28-mainline-console-controllers-since-1996.md  2026-04-28-vr-ar-headset-support.md  production-pathway.dot
docs/plans/: 2026-04-13-lua-interpreter-spike.md  2026-04-14-fennel-on-lua.md  2026-04-14-forth-scripting-engine.md  2026-04-14-pluggable-scripting-engine.md  2026-04-14-vendor-lua.md  2026-04-14-wamr-dev-aot-ship.md  2026-04-14-wasm3-scripting-engine.md  2026-04-14-wren-scripting-engine.md  2026-04-15-dead-code-removal.md  2026-04-15-lua-engine-fixes.md  2026-04-15-phase-d-scripting-engines.md  2026-04-15-scripting-plans-align-scriptrouter.md  2026-04-16-android-port.md  2026-04-16-blender-level-roundtrip.md  2026-04-16-engine-directory-reorganization.md  2026-04-16-git-branch-browser.md  2026-04-16-ios-port.md  2026-04-16-jolt-physics-finish.md  2026-04-16-lua-not-special.md  2026-04-16-script-language-oad-field.md  2026-04-17-android-phase-2.md  2026-04-17-audio-mailbox-api.md  2026-04-17-collision-message-pointer-fix.md  2026-04-17-fix-rest-api-shutdown-crash.md  2026-04-17-fix-window-close-crash.md  2026-04-17-level-pipeline-proof.md  2026-04-17-oas2oad-name-kind-fix.md  2026-04-17-steam.md  2026-04-18-android-launcher-polish.md  2026-04-18-android-size-trim-iter-2.md  2026-04-18-audio-assets-from-iff.md  2026-04-19-blender-roundtrip-oracle-dependencies.md  2026-04-19-levcomp-common-block-two-phase.md  2026-04-19-python-tui-lib-extraction.md  2026-04-19-strip-nongeom-box3.md  2026-04-19-textile-rs-validation.md  2026-04-19-tuilib-log-source.md  2026-04-19-tuilib-worker-pool.md  2026-04-21-ios-port-codemagic.md  2026-04-22-party-games-platform-phase-1.md  (+6 more)
docs/reference/: 2026-04-13-blender-to-cd-iff-pipeline.md  2026-04-14-compile-time-switches.md  2026-04-14-party-game-cards.md  2026-04-15-jerryscript-gcc14-build-fixes.md  production-pathway.md  wf-viewer.md
engine/: build_game.sh
engine/stubs/: physics_jolt.cc  platform_stubs.cc  renderpoly3d_stubs.cc  (+17 more)
ios/: Info.plist  LaunchScreen.storyboard
party-games/: .gitignore  README.md
prompts/: 2026-04-15.md  2026-04-15_23-42-37_01.txt  2026-04-15_23-45-21.txt  2026-04-15_23-53-31.txt  2026-04-16.md  2026-04-16_00-05-49.txt  2026-04-16_00-59-32.txt  2026-04-16_01-03-46.txt  2026-04-16_01-17-26_01.txt  2026-04-16_01-17-40_01.txt  2026-04-16_01-19-30.txt  2026-04-16_01-27-01_01.txt  2026-04-16_01-29-54.txt  2026-04-16_01-30-41.txt  2026-04-16_01-33-06.txt  2026-04-16_01-34-19.txt  2026-04-16_01-39-23.txt  2026-04-16_01-40-34.txt  2026-04-16_01-43-14.txt  2026-04-16_02-12-12.txt  2026-04-16_02-14-03.txt  2026-04-16_02-47-33.txt  2026-04-17.md  2026-04-18.md  2026-04-19.md
scripts/: audit-pdf.py  codemagic-fetch-latest.sh  gen_fennel_source.sh  git-branch-browser.help.md  git-branch-browser.py  hook_log_prompt.sh  hook_md_written.sh  loc_baseline_74d1a47.json  loc_head.json  loc_report.py  make_snowgoons_iff_txt.py  md-to-pdf.sh  minify_lua.py  patch_cd_lua_to_forth.py  patch_shell_forth.py  patch_snowgoons_director_fennel.py  patch_snowgoons_fennel.py  patch_snowgoons_forth.py  patch_snowgoons_js.py  patch_snowgoons_js_binary.py  patch_snowgoons_lua.py  patch_snowgoons_wamr.py  patch_snowgoons_wasm.py  patch_snowgoons_wren.py  tcl_to_lua_in_dump.py  unifdef-sweep.sh  update_wf_status.py
wflevels/: cd.iff  cd_full.iff.txt  cd_snowgoons.iff.txt  levels.txt  licence_policy.toml  shell.aib  snowgoons-standalone.iff  snowgoons.iff  snowgoons.iff.map.yaml  snowgoons.iff.original  snowgoons.iff.txt
wfsource/: GNUMakefile.bld
wftools/: GNUMakefile.tool
wftools/levcomp-rs/: Cargo.toml
wftools/levcomp-rs/src/: asset_registry.rs  common_block.rs  decompile.rs  ini_writer.rs  lc_parser.rs  lev_parser.rs  lvas_writer.rs  lvl_writer.rs  main.rs  mesh_bbox.rs  oad_loader.rs  rooms.rs
wftools/lvldump-rs/: .gitignore  Cargo.toml
wftools/lvldump-rs/src/: level.rs  main.rs  oad.rs
wftools/textile-rs/: Cargo.toml
wftools/textile-rs/src/: allocmap.rs  bitmap.rs  ccyc.rs  config.rs  locfile.rs  main.rs  profile.rs  rmuv.rs  texture.rs
wftools/wf_asset_provider/: Cargo.toml  pyproject.toml
wftools/wf_asset_provider/src/: candidate.rs  error.rs  http.rs  lib.rs  licence.rs  manifest.rs  policy.rs  provider.rs  pybind.rs
wftools/wf_asset_provider/src/providers/: ambientcg.rs  kenney.rs  kenney_catalog.json  mod.rs  opengameart.rs  polyhaven.rs  quaternius.rs  quaternius_catalog.json
wftools/wf_engine/objs_game/wamr_build/: CMakeLists.txt
(+507 files in other folders)
