[package]
name = "levcomp-rs"
version = "0.1.0"
edition = "2021"
description = "World Foundry .lev → .lvl level compiler (Rust port of wftools/iff2lvl)"

[[bin]]
name = "levcomp"
path = "src/main.rs"

[dependencies]
wf_iff = { path = "../wf_iff" }
wf_oad = { path = "../wf_oad" }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
