[package]
name = "lvldump-rs"
version = "0.1.0"
edition = "2021"
description = "World Foundry .lvl level file dumper (Rust port of wftools/lvldump)"

[[bin]]
name = "lvldump"
path = "src/main.rs"

[dependencies]
wf_oad   = { path = "../wf_oad" }
wf_hdump = { path = "../wf_hdump" }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
