[package]
name = "textile-rs"
version = "0.1.0"
edition = "2021"
description = "World Foundry texture atlas packer (Rust port of wftools/textile)"

[[bin]]
name = "textile"
path = "src/main.rs"

[dependencies]
image = { version = "0.24", default-features = false, features = ["tga", "bmp", "png"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
