[package]
name = "wf_asset_provider"
version = "0.1.0"
edition = "2021"
description = "World Foundry asset provider — licence-filtered search & download across CC0 repositories"

[lib]
name = "wf_asset_provider"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wf-asset"
path = "src/bin/wf_asset.rs"

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
pyo3        = { version = "0.22", features = ["extension-module", "abi3-py310"], optional = true }
reqwest     = { version = "0.12", features = ["blocking", "json"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
zip         = { version = "2", default-features = false, features = ["deflate"] }
thiserror   = "1"
clap        = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
