[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "wf_asset_provider"
version = "0.1.0"
description = "World Foundry asset provider — licence-filtered search & download"
requires-python = ">=3.10"

[tool.maturin]
module-name = "wf_asset_provider"
features = ["python"]
