cmake_minimum_required(VERSION 3.14)
project(wamr_wf C)
set(WAMR_BUILD_PLATFORM  "linux")
set(WAMR_BUILD_TARGET    "X86_64")
set(WAMR_BUILD_INTERP    1)
set(WAMR_BUILD_AOT       0)
set(WAMR_BUILD_JIT       0)
set(WAMR_BUILD_FAST_JIT  0)
set(WAMR_BUILD_FAST_INTERP 1)
set(WAMR_BUILD_LIBC_BUILTIN 0)
set(WAMR_BUILD_LIBC_WASI 0)
set(WAMR_BUILD_SIMD      0)
set(WAMR_BUILD_MULTI_MODULE 0)
set(WAMR_BUILD_LIB_PTHREAD 0)
set(WAMR_BUILD_WASM_C_API 1)
include(${WAMR_ROOT_DIR}/build-scripts/runtime_lib.cmake)
add_library(vmlib STATIC ${WAMR_RUNTIME_LIB_SOURCE})
target_include_directories(vmlib PUBLIC ${WAMR_ROOT_DIR}/core/iwasm/include)
